# AudioSet-Classification

./: .gitignore  README.md  justfile  pyproject.toml
.cursor/rules/: python.mdc
.github/workflows/: ci.yml
src/audioset_classification/: __init__.py  main.py
src/audioset_classification/analysis/: __init__.py  umap_viz.py
src/audioset_classification/cli/: analysis_cli.py  data_cli.py  train_cli.py
src/audioset_classification/data/: __init__.py  clap_embeddings.py  class_weights.py  collate.py  csv_loader.py  data_module.py  dataset.py  download.py  features.py  manifest.py  ontology.py  ontology_tree.py
src/audioset_classification/lightning/: __init__.py  lr_schedulers.py  module.py
src/audioset_classification/models/: __init__.py  clap_audio_backbone.py  classifier.py
src/audioset_classification/utils/: logging.py
src/audioset_data/: __init__.py  main.py
tests/: conftest.py
tests/test_analysis/: test_analysis_cli.py  test_umap_viz.py
tests/test_audioset_data/: test_main.py
tests/test_data/: test_clap_embeddings.py  test_class_weights.py  test_csv_loader.py  test_data_cli.py  test_data_module.py  test_dataset.py  test_features.py  test_ontology.py  test_ontology_tree.py
tests/test_lightning/: __init__.py  conftest.py  test_lr_schedulers.py  test_module.py
